add parte de contato

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#jogo">Próxima Partida</a></li>
             <li><a href="#historia">História</a></li>
             <li><a href="#titulos">Títulos</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav>
       </div>
@@ -65,6 +66,21 @@
   <section id="titulos-2">
     <img src="./imagens/tableta-titulos.png" alt="Tabela de Títulos importantes do Liverpool">
     <span>fonte: wikipedia</span>
+  </section>
+
+  <section id="contato">
+    <div class="container">
+      <h1>Contato</h1>
+      <p>Para receber mais conteúdos como esse, entre em contato conosco</p>
+      <form>
+        <label for="nome">Nome</label>
+        <input type="text" name="nome" id="nome" placeholder="Seu nome">
+        <label for="email">E-mail</label>
+        <input type="email" name="email" id="email" placeholder="seuemail@exemplo.com">
+        <label for="mensagem">Mensagem</label>
+        <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Nos diga quais conteúdos deseja receber sobre o Liverpool"></textarea>
+      </form>
+    </div>
   </section>
 
   <footer>
